<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#949ca4"
    tools:context=".Search">

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/black"
        android:hint="Search..."
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/result_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintVertical_bias="0.32"
        tools:itemCount="20"
        tools:listitem="@layout/informationlist" />

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:onClick="home"
            android:src="@drawable/ic_home_pink" />

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:onClick="search"
            android:src="@drawable/ic_pink_search" />

        <ImageButton
            android:id="@+id/barcodeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:onClick="scan"
            android:src="@drawable/ic_pink_scan" />

        <ImageButton
            android:id="@+id/cartBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:backgroundTint="#272928"
            android:onClick="cart"
            android:src="@drawable/ic_basket" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>