...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/header_background"
        app:layout_constraintEnd_toEndOf="@+id/ProductPrice"
        app:layout_constraintStart_toEndOf="@+id/ProductPrice">

        <TextView
            android:id="@+id/orderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
